tests/valid/empty-network.hcdf
<?xml version="1.0"?>
<hcdf version="1.0" name="empty-network-test">
  <comp name="board"/>
  <network name="backbone"/>
</hcdf>
